<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Bake</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="WelcomeMessage">"WELCOME TO BASIC BAKE APPLICATION "</string>
    <string name="RECIPES">RECIPES</string>
    <string name="QUIZ">QUIZ</string>
    <string name="TIMER">TIMER</string>
    <string name="NUTRITION">"NUTRITION "</string>
    <string name="TIPS">TIPS</string>
    <string name="VIDEO">VIDEO</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="BASIC">"BASIC "</string>
    <string name="TOP_RECIPES">TOP RECIPES</string>
    <string name="MEASUREMENT">MEASUREMENT</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="BUTTER_CAKE">BUTTER CAKE</string>
    <string name="SPONGE_CAKE">SPONGE CAKE</string>
    <string name="CHOCOLATE">CHOCOLATE CAKE</string>
    <string name="CUPCAKE">"CUPCAKE "</string>
    <string name="Back">Back</string>
    <string name="title_activity_butter_cake">ButterCakeActivity</string>
    <string name="title_activity_top_recipes">TopRecipesActivity</string>
    <string name="PAVLOVA">PAVLOVA</string>
    <string name="CONGOBARS">CONGO BARS</string>
    <string name="REDVELVET">RED VELVET</string>
    <string name="BROWNIES">BROWNIES</string>
    <string name="CREAMPUFF">CREAM PUFF</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="min60">60 MINUTES</string>
    <string name="min50">50 MINUTES</string>
    <string name="min40">40 MINUTES</string>
    <string name="min30">30 MINUTES</string>
    <string name="min20">20 MINUTES</string>
    <string name="min10">10 MINUTES</string>
    <string name="title_activity_watch">WatchActivity</string>
    <string name="zerotime">00</string>
    <string name="startwatch">START</string>
    <string name="stopwatch">STOP</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="title_activity_end_timer">EndTimerActivity</string>
    <string name="tools">TOOLS</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="basictools">BASIC TOOLS</string>
    <string name="press">TOUCH ABOVE</string>
    <string name="next">NEXT</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="part1">PART 1</string>
    <string name="part2">PART 2</string>
    <string name="part3">PART 3</string>
    <string name="title_activity_quizpart1">Quizpart1Activity</string>
    <string name="option">option</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="tipsmsg">Let us explore some tips that can make our bake looks good and tasty</string>
    <string name="General">General</string>
    <string name="EasyDecoration">Easy Decoration</string>
    <string name="title_activity_general_tips">GeneralTipsActivity</string>
    <string name="title_activity_decoration_tips">DecorationTipsActivity</string>
    <string name="Tip1">TIP #1</string>
    <string name="Tip2">TIP #2</string>
    <string name="Tip3">TIP #3</string>
    <string name="Tip4">TIP #4</string>
    <string name="Tip5">TIP #5</string>
    <string name="Tip6">TIP #6</string>
    <string name="Tip7">TIP #7</string>
    <string name="title_activity_tip">TipActivity</string>
    <string name="TipTitle">Tip Title</string>
    <string name="Meringues">Meringues</string>
    <string name="CookiesBalloon">Cookies Balloon</string>
    <string name="Strawberries">Strawberries</string>
    <string name="CandiedLemon">Candied Lemon</string>
    <string name="title_activity_vedio">VedioActivity</string>
    <string name="vediomsg">How to Make Bread Pudding</string>
    <string name="Illustration">Illustration</string>
    <string name="title_activity_illustration_tips">IllustrationTipsActivity</string>
    <string name="CakeTips">Cake Tips</string>
    <string name="Macaroons">Macaroons</string>
    <string name="BrowniesTips">Brownies Tips</string>
    <string name="Bakingpantips">Baking Pan Tips</string>
    <string name="letstartquiz">"Let’s start the quiz!! "</string>
    <string name="score">Score</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="Done">DONE</string>
    <string name="title_activity_nutrition">NutritionActivity</string>
    <string name="touchtoread">Touch To Read</string>
    <string name="title_activity_read_nutrition">ReadNutritionActivity</string>
    <string name="facts">Facts</string>

</resources>
