<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicbake.TopRecipesActivity" >
    
    <Button
        android:id="@+id/btnpavlova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="#fff"
        android:text="@string/PAVLOVA"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btncongobars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:background="#fff"
        android:text="@string/CONGOBARS"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnredvelvet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:background="#fff"
        android:text="@string/REDVELVET"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnbrownies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="232dp"
        android:background="#fff"
        android:text="@string/BROWNIES"
        android:textColor="@color/purpel" />
    
    <Button
        android:id="@+id/btncreamepuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="292dp"
        android:background="#fff"
        android:text="@string/CREAMPUFF"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btntoprecipesback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="362dp" 
        android:background="#ff69b4"
        android:text="@string/Back"
        android:textColor="@color/purpel" />
    
    
</RelativeLayout>
