<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicbake.BasicActivity" >

 <Button
     android:id="@+id/btnbuttercake"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="52dp"
     android:background="#fff"
     android:text="@string/BUTTER_CAKE"
     android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnspongecake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:background="#fff"
        android:text="@string/SPONGE_CAKE"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnchocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:background="#fff"
        android:text="@string/CHOCOLATE"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btncupcake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="232dp"
        android:background="#fff"
        android:text="@string/CUPCAKE"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnbasicback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="302dp" 
        android:background="#ff69b4"
        android:text="@string/Back"
        android:textColor="@color/purpel" />
    
</RelativeLayout>
