<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicbake.IllustrationTipsActivity" >

    <Button
        android:id="@+id/btncaketips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:text="@string/CakeTips"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnmacaroons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:background="#fff"
        android:text="@string/Macaroons"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnbrowniestips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:background="#fff"
        android:text="@string/BrowniesTips"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnbakingtips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:background="#fff"
        android:text="@string/Bakingpantips"
        android:textColor="@color/purpel" />
    <Button
        android:id="@+id/btnillusback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnbakingtips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ff69b4"
        android:shadowRadius="1"
        android:text="@string/Back"
        android:textColor="@color/purpel" />

</RelativeLayout>
