<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicbake.TipsActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tipslogo" />
    
     <Button
         android:id="@+id/btntipsgeneral"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp"
         android:background="#fff"
         android:text="@string/General"
         android:textColor="@color/purpel" />
   
    <Button
        android:id="@+id/btntipsdecoration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btntipsgeneral"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#fff"
        android:text="@string/EasyDecoration"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btntipsillustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btntipsdecoration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#fff"
        android:text="@string/Illustration"
        android:textColor="@color/purpel" />

    <Button
        android:id="@+id/btnTipsback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btntipsillustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#ff69b4"
        android:shadowRadius="1"
        android:text="@string/Back"
        android:textColor="@color/purpel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/tipsmsg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/purpel" />

</RelativeLayout>
