<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicbake.QuizActivity" >
    
    <Button
        android:id="@+id/btnpart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:background="#fff"
        android:text="@string/letstartquiz"
        android:textColor="@color/purpel"
        android:textSize="36sp" />

   <Button
        android:id="@+id/btnquizback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="342dp"
        android:background="#ff69b4"
        android:shadowRadius="1"
        android:text="@string/Back"
        android:textColor="@color/purpel" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="56dp"
       android:background="@color/pink"
       android:text="@string/QUIZ"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/purpel"
       android:textSize="66sp" />

</RelativeLayout>
